Table produksi_sandings {
  id bgint
  tanggal date
  shift varchar
  kendala varchar
  id_mesin bigint
  created_at timestamp
  updated_at timestamp
}

Table modal_sandings {
  id bigint
  id_produksi_sanding bigint [ref: > produksi_sandings.id ]
  id_barang_setengah_jadi bigint
  kuantitas int
  jumlah_sanding_face int
  jumlah_sanding_back int
  no_palet int
  created_at timestamp
  updated_at timestamp
}

Table hasil_sandings {
  id bigint
  id_produksi_sanding bigint [ref: > produksi_sandings.id]
  id_barang_setengah_jadi bigint 
  kuantitas int
  jumlah_sanding_face int
  jumlah_sanding_back int
  no_palet int
  status varchar
  created_at timestamp
  updated_at timestamp
}

Table pegawai_sandings{
  id bigint
  id_produksi_sanding bigint [ref: > produksi_sandings.id]
  tugas varchar
  masuk time
  pulang time
  ijin varchar
  ket varchar
  id_pegawai bigint
  created_at timestamp
  updated_at timestamp
}

Table validasi_sandings{
  id bigint
  id_produksi_sanding bigint [ref: > produksi_sandings.id]
  role varchar
  status varchar
  created_at timestamps
  updated_at timestamps
}